k8s/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: event-service
          image: ricaml/event-service:v2
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: default
spec:
  selector:
    app: event-service
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
